manifests/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: radarr
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - radarr.blinde.net
      secretName: radarr-tls
  rules:
    - host: radarr.blinde.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
